Fix compile issue with guard
Due to sonar changes in policy/models for guard.

Issue-ID: POLICY-1791
Change-Id: I2cdbe6d0e4ee8bad05b9d3bb1a83e82d4851973c
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>